--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -23,29 +23,49 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.url }}">
 
-  <meta property="og:url" content="{{site.url}}">
+  <meta property="og:url" content="{{ site.url }}">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="{{site.title}}">
-  <meta property="og:image" content="{{site.url}}/images/bulma-banner.png">
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
-  <meta property="og:description" content="{{site.description}}">
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@jgthms">
   <meta name="twitter:creator" content="@jgthms">
-  <meta name="twitter:title" content="{{site.title}}">
-  <meta name="twitter:image" content="{{site.url}}/images/bulma-banner.png">
-  <meta name="twitter:description" content="{{site.description}}">
 
-  <link rel="apple-touch-icon" sizes="180x180" href="{{site.url}}/favicons/apple-touch-icon.png?v=201701041855">
-  <link rel="icon" type="image/png" href="{{site.url}}/favicons/favicon-32x32.png?v=201701041855" sizes="32x32">
-  <link rel="icon" type="image/png" href="{{site.url}}/favicons/favicon-16x16.png?v=201701041855" sizes="16x16">
-  <link rel="manifest" href="{{site.url}}/favicons/manifest.json?v=201701041855">
-  <link rel="mask-icon" href="{{site.url}}/favicons/safari-pinned-tab.svg?v=201701041855" color="#00d1b2">
-  <link rel="shortcut icon" href="{{site.url}}/favicons/favicon.ico?v=201701041855">
-  <meta name="msapplication-config" content="{{site.url}}/favicons/browserconfig.xml?v=201701041855">
+
+  <!-- Shared social media -->
+  {% if page.share_title %}
+    <meta property="og:title" content="{{ page.share_title }}">
+    <meta name="twitter:title" content="{{ page.share_title }}">
+  {% else %}
+    <meta property="og:title" content="{{ site.title }}">
+    <meta name="twitter:title" content="{{ site.title }}">
+  {% endif %}
+
+  {% if page.share_description %}
+    <meta property="og:description" content="{{ page.share_description }}">
+    <meta name="twitter:description" content="{{ page.share_description }}">
+  {% else %}
+    <meta property="og:description" content="{{ site.description }}">
+    <meta name="twitter:description" content="{{ site.description }}">
+  {% endif %}
+
+  {% if page.share_image %}
+    <meta property="og:image" content="{{ site.url }}{{ page.share_image }}">
+    <meta name="twitter:image" content="{{ site.url }}{{ page.share_image }}">
+  {% else %}
+    <meta property="og:image" content="{{ site.url }}/images/bulma-banner.png">
+    <meta name="twitter:image" content="{{ site.url }}/images/bulma-banner.png">
+  {% endif %}
+
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ site.url }}/favicons/apple-touch-icon.png?v=201701041855">
+  <link rel="icon" type="image/png" href="{{ site.url }}/favicons/favicon-32x32.png?v=201701041855" sizes="32x32">
+  <link rel="icon" type="image/png" href="{{ site.url }}/favicons/favicon-16x16.png?v=201701041855" sizes="16x16">
+  <link rel="manifest" href="{{ site.url }}/favicons/manifest.json?v=201701041855">
+  <link rel="mask-icon" href="{{ site.url }}/favicons/safari-pinned-tab.svg?v=201701041855" color="#00d1b2">
+  <link rel="shortcut icon" href="{{ site.url }}/favicons/favicon.ico?v=201701041855">
+  <meta name="msapplication-config" content="{{ site.url }}/favicons/browserconfig.xml?v=201701041855">
   <meta name="theme-color" content="#00d1b2">
 
   <script defer src="{{ site.data.icons.fontawesome5 }}"></script>
