--- a/docs/documentation/components/dropdown.html
+++ b/docs/documentation/components/dropdown.html
@@ -11,7 +11,7 @@ doc-subtab: dropdown
     <button class="button" aria-haspopup="true" aria-controls="dropdown-menu">
       <span>Dropdown button</span>
       <span class="icon is-small">
-        <i class="fas fa-angle-down" aria-hidden="true"></i>
+        <i class="fa fa-angle-down" aria-hidden="true"></i>
       </span>
     </button>
   </div>
