added margin and padding modifier classes

--- a/sass/base/helpers.sass
+++ b/sass/base/helpers.sass
@@ -1,3 +1,5 @@
+@import "../utilities/initial-variables.sass"
+
 // Float
 
 .is-clearfix
@@ -228,6 +230,33 @@ $displays: 'block' 'flex' 'inline' 'inline-block' 'inline-flex'
     visibility: hidden !important
 
 // Other
+.has-margin-top-bottom
+  margin-top: $gap !important
+  margin-bottom: $gap !important
+  &.has-margin-sm
+    margin-top: $gap / 2 !important
+    margin-bottom: $gap / 2 !important
+
+.has-margin-left-right
+  margin-left: $gap !important
+  margin-right: $gap !important
+  &.has-margin-sm
+    margin-left: $gap / 2 !important
+    margin-right: $gap / 2 !important
+
+.has-padding-top-bottom
+  padding-top: $gap !important
+  padding-bottom: $gap !important
+  &.has-padding-sm
+    padding-top: $gap / 2 !important
+    padding-bottom: $gap / 2 !important
+
+.has-padding-left-right
+  padding-left: $gap !important
+  padding-right: $gap !important
+  &.has-padding-sm
+    padding-left: $gap / 2 !important
+    padding-right: $gap / 2 !important
 
 .is-marginless
   margin: 0 !important
