--- a/sass/components/level.sass
+++ b/sass/components/level.sass
@@ -20,7 +20,8 @@
         margin-bottom: 0
       &:not(.is-narrow)
         flex-grow: 1
-      margin-right: 0.75rem
+      &:not(:last-child)
+        margin-right: 0.75rem
   // Responsiveness
   +tablet
     display: flex
