--- a/docs/_includes/scripts.html
+++ b/docs/_includes/scripts.html
@@ -9,6 +9,11 @@
   <script type="text/javascript" src="{{ site.url }}/lib/navbar.js?v={{ site.time | date: '%Y%m%d%H%M' }}"></script>
 {% endif %}
 
+{% if page.layout == 'documentation' %}
+  <script src="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.js"></script>
+  <script src="{{ site.url }}/lib/search.js?v={{ site.time | date: '%Y%m%d%H%M' }}"></script>
+{% endif %}
+
 <div id="fb-root"></div>
 
 <script async defer type="text/javascript">(function(d, s, id) {
