--- a/docs/_layouts/documentation.html
+++ b/docs/_layouts/documentation.html
@@ -16,6 +16,7 @@ route: documentation
           <p class="subtitle">
             Everything you need to <strong>create a website</strong> with Bulma
           </p>
+          <input type="text" id="documention-search">
         </div>
         <div class="column is-narrow">
           {% include carbon.html %}
@@ -72,4 +73,3 @@ route: documentation
     </p>
   </div>
 </section>
-
