Add initial documentation search design

--- a/docs/_layouts/documentation.html
+++ b/docs/_layouts/documentation.html
@@ -16,7 +16,7 @@ route: documentation
           <p class="subtitle">
             Everything you need to <strong>create a website</strong> with Bulma
           </p>
-          <input type="text" id="documention-search">
+          {% include search.html %}
         </div>
         <div class="column is-narrow">
           {% include carbon.html %}
