Add has-bg helpers for block background colors

--- a/sass/base/helpers.sass
+++ b/sass/base/helpers.sass
@@ -100,6 +100,8 @@ $alignments: ('centered': 'center', 'justified': 'justify', 'left': 'left', 'rig
     &:hover,
     &:focus
       color: darken($color, 10%) !important
+  .has-bg-#{$name}
+    background-color: $color !important
 
 @each $name, $shade in $shades
   .has-text-#{$name}
