--- a/sass/components/card.sass
+++ b/sass/components/card.sass
@@ -65,3 +65,105 @@ $card-footer-border-top: 1px solid $border !default
 .card
   .media:not(:last-child)
     margin-bottom: 0.75rem
+
+.card-footer-button
+  align-items: center
+  background-color: $button-background-color
+  color: $button-color
+  cursor: pointer
+  display: flex
+  flex-basis: 0
+  flex-grow: 1
+  flex-shrink: 0
+  justify-content: center
+  padding: 0.75rem
+  strong
+    color: inherit
+  .icon
+    &,
+    &.is-small,
+    &.is-medium,
+    &.is-large
+      height: 1.5em
+      width: 1.5em
+    &:first-child:not(:last-child)
+      margin-left: calc(-0.375em - 1px)
+      margin-right: 0.1875em
+    &:last-child:not(:first-child)
+      margin-left: 0.1875em
+      margin-right: calc(-0.375em - 1px)
+    &:first-child:last-child
+      margin-left: calc(-0.375em - 1px)
+      margin-right: calc(-0.375em - 1px)
+  // States
+  &:hover,
+  &.is-hovered
+    color: $button-hover-color
+  &:focus,
+  &.is-focused
+    color: $button-focus-color
+  &:active,
+  &.is-active
+    color: $button-active-color
+  // Colors
+  &.is-text
+    background-color: transparent
+    color: $button-text-color
+    text-decoration: underline
+    &:hover,
+    &.is-hovered,
+    &:focus,
+    &.is-focused
+      background-color: $button-text-hover-background-color
+      color: $button-text-hover-color
+    &:active,
+    &.is-active
+      background-color: darken($button-text-hover-background-color, 5%)
+      color: $button-text-hover-color
+    &[disabled]
+      background-color: transparent
+  @each $name, $pair in $colors
+    $color: nth($pair, 1)
+    $color-invert: nth($pair, 2)
+    &.is-#{$name}
+      background-color: $color
+      color: $color-invert
+      &:hover,
+      &.is-hovered
+        background-color: darken($color, 2.5%)
+        color: $color-invert
+      &:focus,
+      &.is-focused
+        color: $color-invert
+      &:active,
+      &.is-active
+        background-color: darken($color, 5%)
+        color: $color-invert
+      &[disabled]
+        background-color: $color
+      &.is-inverted
+        background-color: $color-invert
+        color: $color
+        &:hover
+          background-color: darken($color-invert, 5%)
+        &[disabled]
+          background-color: $color-invert
+          color: $color
+      &.is-loading
+        &:after
+          border-color: transparent transparent $color-invert $color-invert !important
+  // Modifiers
+  &[disabled]
+    background-color: $button-disabled-background-color
+    opacity: $button-disabled-opacity
+  &.is-loading
+    color: transparent !important
+    pointer-events: none
+    &:after
+      +loader
+      +center(1em)
+      position: absolute !important
+  &.is-static
+    background-color: $button-static-background-color
+    color: $button-static-color
+    pointer-events: none
