Add $animation-duration to initial-variables

--- a/sass/utilities/mixins.sass
+++ b/sass/utilities/mixins.sass
@@ -142,7 +142,7 @@
         transform: translateY(-5px) rotate(-45deg)
 
 =loader
-  animation: spinAround 500ms infinite linear
+  animation: spinAround $animation-duration infinite linear
   border: 2px solid $border
   border-radius: $radius-rounded
   border-right-color: transparent
